--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.16",
+    "css-loader": "^6.8.1",
     "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
     "tailwindcss": "^3.3.5"
   }
 }
