--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "apexcharts": "^3.44.0",
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "flowbite": "^2.1.1",
