--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.47.2",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
