--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.47.2",
+    "quill": "^1.3.7",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
