--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "chart.js": "^4.4.1",
     "firebase": "^10.8.0",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
+    "moment": "^2.30.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.47.2",
